--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
             </div>
             <div class="col-md-8 col-md-offset-2 col-xs-12">
-                <h2>/* Key competencies */</h2>
+                <h2 class="white">/* Key competencies */</h2>
                 <ul>
                     <li>Broad knowledge of Microsoft SQL Server (SSIS, SSRS and SSAS)</li>
                     <li>Expertise in T-SQL writing stored procedures and functions</li>
@@ -186,9 +186,9 @@
             </div>
         </div>
     </section>
-    <section id="certs">
+    <section parallax-background parallax-ratio="0.7" id="certs">
         <div class="container">
-            <h2>/* Courses and certifications */</h2>
+            <h2 class="white">/* Courses and certifications */</h2>
             <div class="col-md-12 col-xs-12">
                 <h5>Trainings</h5>
                 
