--- a/pages/main.html
+++ b/pages/main.html
@@ -1,9 +1,9 @@
 
 <div data-ng-repeat="item in portfolio">
     <div class="row">
-        <h3><a ng-href="#/portfolio/{{$index}}">{{item.title}}</a></a></h3>
+        <h3><a ng-href="/#/portfolio/{{$index}}">{{item.title}}</a></a></h3>
         <div class="col-md-6 col-xs-12">
-            <img src="img/{{item.img}}" />
+            <img ng-src="img/{{item.img}}" />
         </div>
         <div class="col-md-6 col-xs-12">
             <p>{{item.description}}</p>
