--- a/index.html
+++ b/index.html
@@ -199,29 +199,35 @@
                 </ul>
                 <h5>Certifications</h5>
                 <ul>
-                    <li>Administering Microsoft SQL Server 2012/2014 Databases</li>
+                    <li><a href="files/MS_70-462.pdf" target="_blank">Administering Microsoft SQL Server 2012/2014 Databases</a></li>
                     <li><a href="https://www.udemy.com/certificate/UC-FPF283CC/">Learn and Understand AngularJS</a></li>
                     <li><a href="https://www.udemy.com/certificate/UC-SRKMJU43/" target="_blank">A 13 Hour SQL Server 2014 /ASP.NET/CSS/C#/jQuery Course</a></li>
                 </ul>
                 <h5>Languages</h5>
                 <ul>
                     <li>English: Full professional proficiency</li>
-                    <li>Norwegian: Limited working proficiency</li>
+                    <li><a href="files/Norskkurs-B1-UiS.pdf" target="_blank">Norwegian: Limited working proficiency</a></li>
                     <li>Polish: Native or bilingual proficiency</li>
                 </ul>
             </div>
         </div>
     </section>
-    <section id="contact">
-        <div class="container">
-            <h2>/* Contact */</h2>
-            <p>@: <a href="mailto:wbrzosko@gmail.com">wbrzosko@gmail.com</a></p>
-            <p>m: +47 98 89 53 52</p>
-            <p>t: <a href="https://twitter.com/woj_bro">twitter.com/woj_bro</a></p>
-            <p>l: <a href="https://www.linkedin.com/in/wbrzosko/">linkedin.com/in/wbrzosko/</a></p>
-            <p>g: <a href="https://github.com/wbrzosko">github.com/wbrzosko</a></p>
+    <section id="contact" class="container-fluid">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="row">
+                <img src="img/svg.jpg" class="img-responsive" alt="Contact Me"/>
+                </div>
+            </div>
+            <div class="col-md-6 text-center">
+                <h2>/* Contact */</h2>
+                <p>@: <a href="mailto:wbrzosko@gmail.com">wbrzosko@gmail.com</a></p>
+                <p>m: +47 98 89 53 52</p>
+                <p>t: <a href="https://twitter.com/woj_bro">twitter.com/woj_bro</a></p>
+                <p>l: <a href="https://www.linkedin.com/in/wbrzosko/">linkedin.com/in/wbrzosko/</a></p>
+                <p>g: <a href="https://github.com/wbrzosko">github.com/wbrzosko</a></p>
+            </div>
         </div>
     </section>
 </body>
-
 </html>
