--- a/pages/main.html
+++ b/pages/main.html
@@ -1,14 +1,15 @@
 
-<div data-ng-repeat="item in portfolio">
-    <div class="row">
-        <h3><a ng-href="/#/portfolio/{{$index}}">{{item.title}}</a></a></h3>
-        <div class="col-md-6 col-xs-12">
-            <img ng-src="img/{{item.img}}" />
+<div data-ng-repeat="item in portfolio" class="portfolioitem">
+    <div class="container">
+        <h3>{{item.title}}</h3>
+        <div class="col-md-4 col-xs-12">
+            <a ng-href="{{item.link}}"><img ng-src="img/portfolio/{{item.img}}" class="img-responsive"/></a>
         </div>
-        <div class="col-md-6 col-xs-12">
+        <div class="col-md-8 col-xs-12">
             <p>{{item.description}}</p>
-            <ul data-ng-repeat="feature in item.features">
-                <li>{{feature.name}}</li>                
+            <p>Features:</p>
+            <ul>
+                <li data-ng-repeat="feature in item.features">{{feature.name}}</li>                
             </ul>
         </div>
     </div>
